--- a/css/master.css
+++ b/css/master.css
@@ -1851,6 +1851,23 @@ li {
 .discount .form h2 {
     font-size: 33px;
 }
+form small {
+    font-size: 12px;
+    color: #f00;
+    display: none;
+    margin: -18px 0 20px 0px;
+}
+
+.pass {
+    position: relative;
+}
+
+.pass i {
+    position: absolute;
+    top: 15px;
+    right:15px;
+    cursor: pointer;
+}
 
 .discount .content {
     text-align: center;
