--- a/css/master.css
+++ b/css/master.css
@@ -874,8 +874,10 @@ li {
 }
 
 .our-skills .containerm img {
-    margin-right: 150px;
-    margin-left: -50px;
+    margin-right: 50px;
+    max-width: 50%;
+    height: 300px;
+
 }
 
 @media (max-width:991px) {
@@ -889,7 +891,7 @@ li {
         height: 80%;
         max-height: 767px;
         object-fit: cover;
-        margin: 0 auto;
+        margin: 0 auto 40px;
     }
 
     .our-skills .containerm .skills {
@@ -1170,7 +1172,16 @@ li {
     position: relative;
     overflow: hidden;
 }
-
+.timeline .timeline-content i{
+    background-color: var(--main--color);
+    padding: 8px 10px;
+    border-radius: 0 5px 0 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: beige;
+    font-size: 26px;
+}
 
 .timeline .timeline-content .year {
     margin: 20px auto;
@@ -1387,6 +1398,11 @@ li {
         font-weight: bold;
         color: var(--main--color);
         margin: 0 0 10px;
+    }   
+    
+    .timeline .timeline-content .content h3.app{
+        font-weight: bold;
+        width: 236px;
     }
 
     .timeline .timeline-content .content div h4 {
@@ -2057,7 +2073,7 @@ form small {
 @media (max-width: 767px) {
     .footer .box .line i {
         margin-right: 0;
-        margin-bottom: 15px;
+        margin-bottom: 5px;
     }
 }
 
