--- a/css/master.css
+++ b/css/master.css
@@ -860,6 +860,120 @@ li {
 }
 
 /* End About Us */
+
+/* Start Services */
+.services {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    background-color: var(--section-background-color);
+}
+
+.services .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    gap: 40px;
+    padding: 10px 50px;
+}
+
+.services .container .box {
+    background-color: white;
+    box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+    counter-increment: services;
+    transition: var(--main-transition);
+    -webkit-transition: var(--main-transition);
+    -moz-transition: var(--main-transition);
+    -ms-transition: var(--main-transition);
+    -o-transition: var(--main-transition);
+    position: relative;
+}
+
+.services .container .box:hover {
+    transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    -o-transform: translateY(-10px);
+}
+
+.services .container .box::before {
+    position: absolute;
+    content: "";
+    top: -3px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--main--color);
+    width: 0;
+    height: 3px;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+
+.services .container .box:hover::before {
+    width: 100%;
+}
+
+.services .container .box i {
+    display: block;
+    text-align: center;
+    color: #d5d5d5;
+    margin: 30px 0 20px;
+}
+
+.services .container .box h3 {
+    text-align: center;
+    color: var(--main--color);
+    margin: 20px 0 40px;
+    font-size: 25px;
+}
+
+.services .container .box .info {
+    text-align: right;
+    padding: 15px;
+    background-color: #f9f9f9;
+    position: relative;
+}
+
+.services .container .box .info::before {
+    position: absolute;
+    content: "0" counter(services);
+    left: 0;
+    top: 0;
+    width: 80px;
+    height: 100%;
+    background-color: var(--main--color);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 30px;
+    padding-right: 15px;
+}
+
+.services .container .box .info::after {
+    position: absolute;
+    content: "";
+    left: 80px;
+    top: 0;
+    width: 50px;
+    height: calc(100% + 0.4px);
+    background-color: #d5d5d5;
+    transform: skewX(-30deg);
+    -webkit-transform: skewX(-30deg);
+    -moz-transform: skewX(-30deg);
+    -ms-transform: skewX(-30deg);
+    -o-transform: skewX(-30deg);
+}
+
+.services .container .box .info a {
+    color: var(--main--color);
+}
+
+/* End Services */
+
 /* Start Our Skills */
 .our-skills {
     padding-top: var(--main-padding-top);
