--- a/css/master.css
+++ b/css/master.css
@@ -1129,11 +1129,11 @@ li {
     }
 }
 
-@media (min-width: 667px) and (max-width: 889px) {
+@media (min-width: 500px) and (max-width: 889px) {
     .gallery {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 40px;
+        gap: 20px;
         padding: 30px;
     }
 }
@@ -1609,33 +1609,34 @@ li {
 
 .features {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-columns: repeat(4, 1fr); */
     gap: 30px;
     text-align: center;
     padding: 30px;
 }
 
-@media (max-width:767px) {
+@media (min-width:767px) {
     .features {
-        grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     }
 }
 
-/* .featuresm .feat-box {
-    width: calc(75% / 3);
-    float: left;
-    text-align: center;
-    margin-bottom: 40px;
-} */
+@media  (min-width:500px) and (max-width:767px) {
+    .features {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
 
 .featuresm .feat-box {
+    position:relative;
     background-color: var(--mm--color);
     padding: 15px 13px;
-    border-radius: 25px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
-    -o-border-radius: 25px;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
@@ -1653,6 +1654,7 @@ li {
     box-shadow: -6px 6px 16px 0px var(--mm--color);
 }
 
+@media (min-width:320px){
 .featuresm .feat-box img {
     width: 96px;
     height: 96px;
@@ -1664,16 +1666,46 @@ li {
     -o-border-radius: 50%;
     object-fit: cover;
 }
+}
 
-.featuresm .feat-box h4 {
+@media (max-width:320px){
+    .featuresm .feat-box img {
+        position: absolute;
+        width: 80px;
+        height: 80px;
+        top: -10px;
+        left: -20px;
+        border: 6px solid #ececec;
+        /* border: 2px solid #eee; */
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        object-fit: cover;
+    }
+}
+
+.featuresm .feat-box h4{
     text-transform: capitalize;
-    font-size: 18px;
     font-weight: bold;
     color: var(--main--color);
     text-align: center;
     margin: 15px 0 35px;
     position: relative;
 }
+
+/* @media (min-width:320px){
+    .featuresm .feat-box h4 {
+        text-transform: capitalize;
+        font-size: 18px;
+        font-weight: bold;
+        color: var(--main--color);
+        text-align: center;
+        margin: 15px 0 35px;
+        position: relative;
+    }
+} */
 
 .featuresm .feat-box h4::before {
     content: '';
@@ -1732,15 +1764,32 @@ li {
 
 .testimonialsm .testimonials .testimonials-content {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
     gap: 20px;
     padding: 50px 30px;
 }
 
+@media (min-width:767px) {
+    .testimonialsm .testimonials .testimonials-content  {
+         grid-template-columns: repeat(3, 1fr);
+    }
+    .testimonialsm .testimonials .testimonials-content .ts-box {
+        height:auto;
+    }
+}
+
+@media  (min-width:500px) and (max-width:767px) {
+    .testimonialsm .testimonials .testimonials-content  {
+        grid-template-columns: repeat(2, 1fr);
+    }
+     .testimonialsm .testimonials .testimonials-content .ts-box {
+        height:280px;
+    }
+}
 .testimonialsm .testimonials .testimonials-content .ts-box {
     position: relative;
     z-index: 2;
-    height: 200px;
+    /* height: 200px; */
     max-height: 350px;
     background-color: #fff;
     padding: 20px;
@@ -1766,7 +1815,7 @@ li {
     .testimonialsm .testimonials .testimonials-content .ts-box {
         width: 100%;
         max-width: none;
-        height: 270px;
+        height: auto;
         padding: 15px;
         font-size: 16px;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -2041,6 +2090,12 @@ form small {
     cursor: pointer;
 }
 
+@media(max-width:375px){
+    .pass i {
+    right: 42px;
+    }
+}
+
 .discount .content {
     text-align: center;
     padding: 0 20px;
@@ -2128,7 +2183,7 @@ form small {
 }
 
 .footer .containermm .box:first-child p {
-    margin: 16px 0;
+    margin: 16px 0 0;
     line-height: 2;
     color: #b9b9b9;
 }
@@ -2159,12 +2214,29 @@ form small {
     -ms-transition: padding-left 0.3s ease, color 0.3s ease;
     -o-transition: padding-left 0.3s ease, color 0.3s ease;
 }
-
+/* 
 @media (max-width: 767px) {
     .footer .containermm .box .links li {
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+} */
+
+@media (max-width: 767px) {
+    .footer .containermm {
+        display: grid
+;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 16px;
+        padding: 20px;
+    }
+    .footer .containermm .box .links li {
+        display: flex;
+        align-items: center;
+        /* justify-content: center; */
+        width :250px;
+        margin:0 auto;
     }
 }
 
@@ -2184,7 +2256,7 @@ form small {
 }
 
 .footer .containermm .box .links p {
-    font-size: 18px;
+    font-size:23px;
     color: #b9b9b9;
     transition: color 0.3s ease;
     margin: 0;
@@ -2199,7 +2271,7 @@ form small {
 }
 
 .footer .containermm .box .links li p a {
-    font-size: 15px;
+    font-size: 20px;
     color: inherit;
     text-decoration: none;
 }
