--- a/css/master.css
+++ b/css/master.css
@@ -1127,14 +1127,15 @@ li {
     padding: 30px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .our-skills .containerm img {
-    margin-right: 50px;
+    margin-left: 50px;
     max-width: 50%;
     height: 300px;
-
+    mix-blend-mode: multiply;
+    width: 500px;
 }
 
 @media (max-width:991px) {
@@ -1145,21 +1146,22 @@ li {
     .our-skills .containerm img {
         width: 100%;
         max-width: 767px;
-        height: 80%;
-        max-height: 767px;
-        object-fit: cover;
+        /* height: 100px; */
+        max-height: 743px;
+        object-fit: contain;
         margin: 0 auto 40px;
+        ;
     }
 
     .our-skills .containerm .skills {
-        max-width: 767px;
+        max-width: 667px;
         width: 100%;
     }
 }
 
 
 .our-skills .containerm .skills {
-    flex: 1;
+    flex: 0.8;
 }
 
 .our-skills .containerm .skills li {
@@ -1273,6 +1275,7 @@ li {
 
     .gallery .box {
         width: 270px;
+        height: 270px;
     }
 }
 
@@ -1289,13 +1292,72 @@ li {
 @media (min-width: 666px) {
     .gallery .box {
         width: 100%;
+        height: 280px;
     }
 }
 
 .gallery .box {
+    border-radius: 15px;
+    position: relative;
     padding: 15px;
-    background-color: white;
+    background-color: var(--mm--color);
     box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
+    transform-style: preserve-3d;
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+}
+
+.gallery .box:hover {
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+}
+
+.gallery .box .back {
+    border-radius: 15px;
+    border: 5px solid var(--main--color);
+    padding: 20px 0;
+    text-align: center;
+    position: absolute;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+}
+
+.gallery .box .front {
+    backface-visibility: hidden;
+    position: absolute;
+    -webkit-backface-visibility: hidden;
+}
+
+.gallery .box .back h2 {
+    color: var(--main--color);
+    font-size: 20px;
+    padding: 0px 0 10px;
+}
+
+.gallery .box .back p {
+    color: #767676;
+    font-size: 15px;
+    line-height: 1.5;
+    padding: 10px 0;
+}
+
+.gallery .box .front,
+.gallery .box .back {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
 .gallery .box .image {
@@ -1324,7 +1386,7 @@ li {
 .gallery .box img {
     object-fit: cover;
     cursor: pointer;
-    height: 260px;
+    height: 100%;
     width: 100%;
     max-width: 100%;
     transition: var(--main-transition);
@@ -1376,8 +1438,8 @@ li {
 
 @media (max-width: 454px) {
     .popup-box {
-        width: 90%;
-        height: 50%;
+        width: 75%;
+        height: 44%;
     }
 }
 
@@ -1398,9 +1460,9 @@ li {
 /* Popup Image */
 .popup-box img {
     width: 100%;
-    height: 90%;
-    border-radius: 10px;
+    height: 94%;
     object-fit: cover;
+    padding: 0 0 20px;
 }
 
 
