--- a/css/master.css
+++ b/css/master.css
@@ -36,49 +36,71 @@ li {
         display: none;
     }
 } */
-
-.go-down {
-    z-index: 1000;
-    color: var(--main--color);
+.page-indicator {
     position: fixed;
-    bottom: 30px;
-    right: 15px;
-    transform: none;
-    transition: var(--main-transition);
-    -webkit-transition: var(--main-transition);
-    -moz-transition: var(--main-transition);
-    -ms-transition: var(--main-transition);
-    -o-transition: var(--main-transition);
+    right: 20px;
+    bottom: -100px;
+    width: 60px;
+    height: 60px;
+    background: conic-gradient(var(--mm--color) 0deg, var(--mm--color) 0deg);
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.6s ease;
+    -webkit-transition: all 0.6s ease;
+    -moz-transition: all 0.6s ease;
+    -ms-transition: all 0.6s ease;
+    -o-transition: all 0.6s ease;
+    opacity: 0;
+    z-index: 1000;
 }
 
-.go-down i {
-    font-size: 30px;
+.page-indicator.show {
+    bottom: 20px;
+    opacity: 1;
+}
+
+
+.top {
+    width: 50px;
+    height: 50px;
+    background-color: var(--section-background);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 0.8s ease;
+    -webkit-transition: all 0.8s ease;
+    -moz-transition: all 0.8s ease;
+    -ms-transition: all 0.8s ease;
+    -o-transition: all 0.8s ease;
+}
+
+.top i {
+    font-size: 24px;
+    color: var(--main--color);
     animation: boncing 1.5s infinite;
     -webkit-animation: boncing 1.5s infinite;
 }
 
 @keyframes boncing {
 
-    0%,
-    10%,
-    20%,
-    50%,
-    80%,
-    100% {
-        transform: translateY(0);
-        -webkit-transform: translateY(0);
-        -moz-transform: translateY(0);
-        -ms-transform: translateY(0);
-        -o-transform: translateY(0);
+    0% {
+        transform: translateY(3px);
     }
 
-    40%,
-    60% {
-        transform: translateY(-15px);
-        -webkit-transform: translateY(-15px);
-        -moz-transform: translateY(-15px);
-        -ms-transform: translateY(-15px);
-        -o-transform: translateY(-15px);
+    50% {
+        transform: translateY(-3px);
+    }
+
+    100% {
+        transform: translateY(3px);
     }
 }
 
@@ -219,7 +241,7 @@ li {
     left: -200px;
     width: 200px;
     height: 95%;
-    background-color: var(--mm--color);
+    background-color: rgb(82 80 80 / 71%);
     z-index: 1000;
     transition: 1s;
     -webkit-transition: 1s;
@@ -279,6 +301,7 @@ li {
     background-color: #eee;
     margin: 10px;
     border-radius: 10px;
+    height: 110px;
 }
 
 .settings-box .options-box h4 {
@@ -1286,6 +1309,7 @@ li {
 
     .gallery .box {
         width: 95%;
+        height: 290px;
     }
 }
 
@@ -1319,6 +1343,10 @@ li {
 }
 
 .gallery .box .back {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     border-radius: 15px;
     border: 5px solid var(--main--color);
     padding: 20px 0;
@@ -1331,6 +1359,22 @@ li {
     -moz-transform: rotateY(180deg);
     -ms-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+
+.gallery .box .back img {
+    border: 5px solid var(--mm--color);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    margin-bottom: 17px;
 }
 
 .gallery .box .front {
@@ -1341,7 +1385,7 @@ li {
 
 .gallery .box .back h2 {
     color: var(--main--color);
-    font-size: 20px;
+    font-size: 19px;
     padding: 0px 0 10px;
 }
 
