--- a/css/master.css
+++ b/css/master.css
@@ -349,7 +349,14 @@ li {
     border-radius: 10px;
     height: 110px;
 }
-
+.options-box-finly{
+    padding: 15px;
+    text-align: center;
+    background-color: #eee;
+    margin: 10px;
+    border-radius: 10px;
+    height: 235px;
+}
 .settings-box .options-box h4 {
     margin: 0;
     color: var(--main--color);
